<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="flattering_argument">Пользователькое соглашение</string>
    <string name="Search">Поиск</string>
    <string name="message_email">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_email">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_to">Поделиться через...</string>
    <string name="update">Обновить</string>
    <string name="connection_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_fault_music">Ничего не нашлось</string>
    <string name="you_where_looking">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>