<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/colorPrimary"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:fontFamily="@font/ys_display_medium"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="22sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/search"
        style="@style/MainCustomButtonStyle"
        app:icon="@drawable/search"
        android:text="@string/search" />

    <Button
        android:id="@+id/media_library"
        style="@style/MainCustomButtonStyle"
        app:icon="@drawable/media"
        android:text="@string/media" />

    <Button
        android:id="@+id/settings"
        style="@style/MainCustomButtonStyle"
        app:icon="@drawable/settings"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        app:iconTint="@color/icon_color" />

</LinearLayout>