<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/back"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/textView"
            android:textColor="@color/black"
            android:gravity="center_vertical"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:text="@string/settings"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/black_theme"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="21dp"
            android:layout_weight="1"
            android:text="@string/black_theme" />

        <Switch
            android:id="@+id/switch1"
            android:gravity="center"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="21dp"
            android:layout_weight="1"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:srcCompat="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/writeToSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="21dp"
            android:layout_weight="1"
            android:text="@string/write_to_support" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:srcCompat="@drawable/ic_group" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/flatteringAgreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:fontFamily="@font/ys_display_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:padding="21dp"
            android:layout_weight="1"
            android:text="@string/flattering_argument" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:srcCompat="@drawable/ic_arrow" />
    </LinearLayout>
</LinearLayout>