<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"

        tools:context=".TrackActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_arrow"
            app:navigationIconTint="@color/search_title_color" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <ImageView
            android:id="@+id/placeholder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder_312x312"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_medium"
            tools:text="@string/app_name"
            android:textColor="@color/search_title_color"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/placeholder" />

        <TextView
            android:id="@+id/groupTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/search_title_color"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="14sp"
            android:layout_marginTop="12dp"
            tools:text="@string/clear_history"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/trackTitle" />

        <ImageButton
            android:id="@+id/add_track"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_add_track"
            app:layout_constraintBottom_toBottomOf="@id/play"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toTopOf="@id/play" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_button_play"
            app:layout_constraintEnd_toStartOf="@id/add_favorite"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/add_track"
            app:layout_constraintTop_toBottomOf="@id/groupTitle" />

        <ImageButton
            android:id="@+id/add_favorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_background"
            android:src="@drawable/ic_like"
            app:layout_constraintBottom_toBottomOf="@id/play"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toTopOf="@id/play" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:30"
            android:textColor="@color/search_title_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/play"
            app:layout_constraintStart_toStartOf="@id/play"
            app:layout_constraintTop_toBottomOf="@id/play" />

        <TextView
            android:id="@+id/durationTitle"
            style="@style/TrackTitleText"
            android:text="@string/duration"
            app:layout_constraintBottom_toBottomOf="@id/duration"
            app:layout_constraintEnd_toStartOf="@id/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/duration" />

        <TextView
            android:id="@+id/duration"
            style="@style/TrackValueText"
            tools:text="5:43"
            app:layout_constraintBottom_toTopOf="@id/album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/durationTitle"
            app:layout_constraintTop_toBottomOf="@id/time" />

        <TextView
            android:id="@+id/albomTitle"
            style="@style/TrackTitleText"
            android:text="@string/album"
            app:layout_constraintTop_toTopOf="@id/album"
            app:layout_constraintBottom_toBottomOf="@id/album"
            app:layout_constraintEnd_toStartOf="@id/album"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/album"
            style="@style/TrackValueText"
            tools:text="Yesterday (Remastered 2009)"
            app:layout_constraintBottom_toTopOf="@id/year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/albomTitle"
            app:layout_constraintTop_toBottomOf="@id/duration" />

        <TextView
            android:id="@+id/yearTitle"
            style="@style/TrackTitleText"
            android:text="@string/year"
            app:layout_constraintTop_toTopOf="@id/year"
            app:layout_constraintBottom_toBottomOf="@id/year"
            app:layout_constraintEnd_toStartOf="@id/year"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/year"
            style="@style/TrackValueText"
            tools:text="1965"
            app:layout_constraintBottom_toTopOf="@id/genre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/yearTitle"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/genreTitle"
            style="@style/TrackTitleText"
            android:text="@string/genre"
            app:layout_constraintTop_toTopOf="@id/genre"
            app:layout_constraintBottom_toBottomOf="@id/genre"
            app:layout_constraintEnd_toStartOf="@id/genre"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/genre"
            style="@style/TrackValueText"
            tools:text="Rock"
            app:layout_constraintBottom_toTopOf="@id/country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/genreTitle"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/countryTitle"
            style="@style/TrackTitleText"
            android:text="@string/country"
            app:layout_constraintTop_toTopOf="@id/country"
            app:layout_constraintBottom_toBottomOf="@id/country"
            app:layout_constraintEnd_toStartOf="@id/country"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/country"
            style="@style/TrackValueText"
            android:layout_marginBottom="20dp"
            tools:text="Великобритания"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/countryTitle"
            app:layout_constraintTop_toBottomOf="@id/genre" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>